# QML-Shader-Effects-Playground

./: CMakeLists.txt  Main.qml  Readme.md  main.cpp
ShaderEffects/: BloomEffect.qml  BloomEffectBlurX.frag  BloomEffectBlurY.frag  BloomEffectBrightPass.frag  BloomEffectCompose.frag  BrightPass_ColorPick.frag  BulgeEffect.frag  BulgeEffect.qml  CMakeLists.txt  ChromaticAberration.frag  ChromaticAberration.qml  Compose.frag  GenieEffect.qml  GenieEffect.vert  GlitchEffect.frag  GlitchEffect.qml  GodRaysEffect.qml  GodRaysRadialBlur.frag  PixelationEffect.frag  PixelationEffect.qml  RadialBlur.frag  RadialBlur.qml  RippleEffect.frag  RippleEffect.qml  VignetteEffect.frag  VignetteEffect.qml
